Simplify