@@ -46,7 +46,7 @@ if exist "%USERPROFILE%\mavenrc_pre.cmd" call "%USERPROFILE%\mavenrc_pre.cmd" %*
 if exist "%USERPROFILE%\mavenrc.cmd" call "%USERPROFILE%\mavenrc.cmd" %*
 :skipRc
 
-@setlocal EnableDelayedExpansion
+@setlocal
 
 set ERROR_CODE=0
 
@@ -70,29 +70,12 @@ if not exist "%JAVACMD%" (
   goto error
 )
 
-@REM Check Java version
-"%JAVACMD%" -version 2>&1 | "%SystemRoot%\System32\findstr.exe" /i /r "version[^0-9]*[0-9]" > "%TEMP%\mvn-java-version.txt"
+@REM Check Java version by testing the Java 17+ flag
+"%JAVACMD%" --enable-native-access=ALL-UNNAMED -version >nul 2>&1
 if ERRORLEVEL 1 (
-    echo Error: Unable to determine Java version. >&2
-    goto error
-)
-set /p JAVA_VERSION_LINE=<"%TEMP%\mvn-java-version.txt"
-del "%TEMP%\mvn-java-version.txt"
-
-for /f "tokens=3" %%g in ("!JAVA_VERSION_LINE!") do (
-    set JAVAVER=%%g
-)
-set JAVAVER=!JAVAVER:"=!
-for /f "delims=. tokens=1" %%v in ("!JAVAVER!") do (
-    set JAVA_MAJOR_VERSION=%%v
-)
-
-if !JAVA_MAJOR_VERSION! LSS 17 (
-    setlocal DisableDelayedExpansion
     echo Error: Apache Maven 4.x requires Java 17 or newer to run. >&2
-    echo Your current Java version appears to be %JAVA_VERSION_LINE% >&2
+    "%JAVACMD%" -version >&2
     echo Please upgrade your Java installation or set JAVA_HOME to point to a compatible JDK. >&2
-    endlocal
     goto error
 )
 
